[tool.poetry]
name = "atlas-measurements"
version = "0.1.0"
description = "Find GCP location with the lowest RTT to Tbilisi"
authors = ["Fedor Saveliev (https://github.com/nett-ef)"]
readme = "README.rst"
license = "MIT"
packages = [{include = "atlas_measurements"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

